Fix code overflowing container

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -96,3 +96,7 @@ dl {
     margin: 0;
   }
 }
+
+pre {
+  overflow-x: auto;
+}
